first dotProduct implementation